# hanpy

./: .gitignore  README.md  pyproject.toml  spec.md
src/hanpy/: __init__.py
src/한/: __init__.py  builtins_ko.py
