[tool.poetry]
name = "hanpy"
version = "0.1.0"
description = "Hanpy is a Python-compatible language that enables programming in Korean."
authors = ["ilotoki0804 <ilotoki0804@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "hanpy", from = "src" },
    { include = "한", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
